# midasis_prod_latest

./: design_guidelines.json  vercel.json
.emergent/: emergent.yml
backend/: pyproject.toml  requirements.txt  server.py
backend/tests/: test_midasis_api.py
frontend/: package.json  tailwind.config.js
frontend/public/: index.html  manifest.json
frontend/src/: App.css  App.js  index.css
frontend/src/components/: About.jsx  Clients.jsx  Contact.jsx  CyberSecurity.jsx  Footer.jsx  Hero.jsx  IndiaStaffing.jsx  Logo.jsx  Navbar.jsx  PracticePage.jsx  Practices.jsx  Services.jsx  USStaffing.jsx  Vision.jsx  WhyChoose.jsx
frontend/src/pages/: AIML.jsx  AppDevelopment.jsx  ContactPage.jsx  CyberSecurity.jsx  DevOps.jsx  ERP.jsx  Home.jsx  ITStaffing.jsx  PrivacyPolicy.jsx  SAP.jsx  TermsConditions.jsx
memory/: PRD.md
test_reports/: iteration_1.json
test_reports/pytest/: pytest_results.xml
