[project]
name = "midasis-backend"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "fastapi==0.128.8",
    "uvicorn==0.39.0",
    "boto3>=1.42.97",
    "requests-oauthlib>=2.0.0",
    "cryptography>=47.0.0",
    "python-dotenv>=1.2.1",
    "pymongo==4.17.0",
    "pydantic>=2.13.3",
    "email-validator>=2.3.0",
    "pyjwt>=2.12.1",
    "bcrypt==5.0.0",
    "passlib>=1.7.4",
    "tzdata>=2026.2",
    "motor==3.7.1",
    "python-jose>=3.5.0",
    "requests>=2.32.5",
    "python-multipart>=0.0.20",
]
